Commiting the Realwork

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<!-- This is th compyright 2019 -->
 
 <head>
-	<title>An exemple website</title>
+	<title>My real title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +17,11 @@
 	<main class="container">
 		<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some < REAL> content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2019</p>
 	</footer>
 </body>
 
