--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-	<title>An exemple website</title>
+	<title>Fake title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<main class="container">
 		<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Fake content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2013</p>
 	</footer>
 </body>
 
